--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Welcome to My GitHub Portfolio</h1>
-  <p>Here are some of my projects:</p>
+  <p>Applied Data Science Repository:</p>
 
   <ul>
     <li><a href="https://github.com/jasminecash/ML-Algorithms-for-Hospital-Readmission
