--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 <body>
   <h1>Welcome to My GitHub Portfolio</h1>
   <p>Applied Data Science Repository:</p>
+  
+  <p>Electronic Health Records:</p>
 
   <ul>
     <li><a href="https://github.com/jasminecash/ML-Algorithms-for-Hospital-Readmission
 " target="_blank">Project 1 – Machine Learning and Electronic Health Records</a></li>
+
+    <p>Psycometrics:</p>
+    
     <li><a href="https://github.com/jasminecash/BBS-and-FGA-CFA" target="_blank">Project 2 – Simple Clinical Data Cleaning Pipeline</a></li>
+
+    <p>Neuroimaging:</p>
     <li><a href="https://github.com/jasminecash/SEP-Preprocess" target="_blank">Project 3 – EEG Pipeline Comparison</a></li>
   </ul>
 </body>
