--- a/index.html
+++ b/index.html
@@ -3,23 +3,148 @@
 <head>
   <meta charset="UTF-8">
   <title>My Projects Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #4a90e2;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1.2rem;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    section h2 {
+      color: #4a90e2;
+      margin-bottom: 1rem;
+      border-bottom: 2px solid #4a90e2;
+      display: inline-block;
+      padding-bottom: 0.25rem;
+    }
+
+    .project-list {
+      list-style: none;
+      padding: 0;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
+
+    .project-list li {
+      background-color: white;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    .project-list li:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+    }
+
+    a {
+      color: #4a90e2;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .icon {
+      font-size: 2rem;
+    }
+
+    .description {
+      font-size: 0.9rem;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My GitHub Portfolio</h1>
-  <p>Applied Data Science Repository:</p>
-  
-  <p>Electronic Health Records:</p>
+  <header>
+    <h1>Welcome to My GitHub Portfolio</h1>
+    <p>Applied Data Science & Neuroscience Projects</p>
+  </header>
 
-  <ul>
-    <li><a href="https://github.com/jasminecash/ML-Algorithms-for-Hospital-Readmission
-" target="_blank">Project 1 – Machine Learning and Electronic Health Records</a></li>
+  <main>
+    <section>
+      <h2>Electronic Health Records</h2>
+      <ul class="project-list">
+        <li>
+          <span class="icon">🩺</span>
+          <a href="https://github.com/jasminecash/ML-Algorithms-for-Hospital-Readmission" target="_blank">
+            Project 1 – Machine Learning & EHR
+          </a>
+          <span class="description">
+            Predict hospital readmissions using machine learning algorithms applied to electronic health records.
+          </span>
+        </li>
+      </ul>
+    </section>
 
-    <p>Psycometrics:</p>
-    
-    <li><a href="https://github.com/jasminecash/BBS-and-FGA-CFA" target="_blank">Project 2 – Simple Clinical Data Cleaning Pipeline</a></li>
+    <section>
+      <h2>Psychometrics</h2>
+      <ul class="project-list">
+        <li>
+          <span class="icon">📊</span>
+          <a href="https://github.com/jasminecash/BBS-and-FGA-CFA" target="_blank">
+            Project 2 – Clinical Data Cleaning
+          </a>
+          <span class="description">
+            Pipeline for cleaning and processing balance and gait assessment data for clinical research.
+          </span>
+        </li>
+      </ul>
+    </section>
 
-    <p>Neuroimaging:</p>
-    <li><a href="https://github.com/jasminecash/SEP-Preprocess" target="_blank">Project 3 – EEG Pipeline Comparison</a></li>
-  </ul>
+    <section>
+      <h2>Neuroimaging</h2>
+      <ul class="project-list">
+        <li>
+          <span class="icon">🧠</span>
+          <a href="https://github.com/jasminecash/SEP-Preprocess" target="_blank">
+            Project 3 – EEG Pipeline Comparison
+          </a>
+          <span class="description">
+            Compare preprocessing pipelines for EEG data to optimize signal quality and analysis accuracy.
+          </span>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
+
