--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My GitHub Portfolio</h1>
+    <h1>Jasmine J. Cash, PhD</h1>
+    <h2>Welcome to My GitHub Portfolio</h2>
     <p>Applied Data Science & Neuroscience Projects</p>
   </header>
 
