--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
       font-size: 2.5rem;
     }
 
+    header h2 {
+      margin: 0.5rem 0 0;
+      font-size: 1.4rem;
+    }
+
     header p {
       margin: 0.5rem 0 0;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
     }
 
     main {
@@ -101,12 +106,12 @@
   </header>
 
   <main>
-        <section>
+    <section>
       <h2>Neuroimaging</h2>
       <ul class="project-list">
         <li>
           <span class="icon">🧠</span>
-          <a href="https://github.com/jasminecash/SEP-Preprocess" target="_blank">
+          <a href="project1.html">
             Project 1 – EEG Pipeline Comparison
           </a>
           <span class="description">
@@ -116,12 +121,12 @@
       </ul>
     </section>
 
-        <section>
+    <section>
       <h2>Psychometrics</h2>
       <ul class="project-list">
         <li>
           <span class="icon">📊</span>
-          <a href="https://github.com/jasminecash/BBS-and-FGA-CFA" target="_blank">
+          <a href="project2.html">
             Project 2 – Clinical Data Cleaning
           </a>
           <span class="description">
@@ -136,7 +141,7 @@
       <ul class="project-list">
         <li>
           <span class="icon">🩺</span>
-          <a href="https://github.com/jasminecash/ML-Algorithms-for-Hospital-Readmission" target="_blank">
+          <a href="project3.html">
             Project 3 – Machine Learning & EHR
           </a>
           <span class="description">
@@ -148,4 +153,3 @@
   </main>
 </body>
 </html>
-
