--- a/project2.html
+++ b/project2.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project 2 – Clinical Data Cleaning</title>
-  <style>/* same CSS as above */</style>
+  <title>Project 1 – EEG Pipeline Comparison</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #4a90e2;
+      color: white;
+      text-align: center;
+      padding: 1.5rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #4a90e2;
+      border-bottom: 2px solid #4a90e2;
+      display: inline-block;
+      padding-bottom: 0.25rem;
+    }
+    ul { list-style: none; padding-left: 0; }
+    ul li { margin: 0.5rem 0; }
+    a { color: #4a90e2; font-weight: bold; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .back-link { display: block; margin-top: 2rem; text-align: center; }
+  </style>
 </head>
 <body>
   <header>
