--- a/project2.html
+++ b/project2.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project 2 – EEG Pipeline Comparison</title>
+  <title>Project 2 – Clinical Data Cleaning</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -60,6 +58,15 @@
         <li><a href="#" target="_blank">Dataset (OSF / Zenodo link)</a></li>
       </ul>
     </section>
+    <section>
+      <h2>Technologies Used</h2>
+      <p>R, lavaan, tidyverse, ggplot2</p>
+    </section>
+    <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
+  </main>
+</body>
+</html>
+
     <section>
       <h2>Technologies Used</h2>
       <p>R, lavaan, tidyverse, ggplot2</p>
