--- a/project2.html
+++ b/project2.html
@@ -60,7 +60,10 @@
     </section>
     <section>
       <h2>Technologies Used</h2>
-      <p>R, lavaan, tidyverse, ggplot2</p>
+      <ul>
+        <li>R</li>
+        <li>tidyverse</li>
+      </ul>
     </section>
     <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
   </main>
