--- a/project3.html
+++ b/project3.html
@@ -3,7 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <title>Project 3 – Machine Learning & EHR</title>
-  <style>/* same CSS as above */</style>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #4a90e2;
+      color: white;
+      text-align: center;
+      padding: 1.5rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #4a90e2;
+      border-bottom: 2px solid #4a90e2;
+      display: inline-block;
+      padding-bottom: 0.25rem;
+    }
+    ul { list-style: none; padding-left: 0; }
+    ul li { margin: 0.5rem 0; }
+    a { color: #4a90e2; font-weight: bold; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .back-link { display: block; margin-top: 2rem; text-align: center; }
+  </style>
 </head>
 <body>
   <header>
@@ -26,7 +60,12 @@
     </section>
     <section>
       <h2>Technologies Used</h2>
-      <p>Python, scikit-learn, Pandas, Jupyter</p>
+      <ul>
+        <li>Python</li>
+        <li>scikit-learn</li>
+        <li>Pandas</li>
+        <li>Jupyter</li>
+      </ul>
     </section>
     <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
   </main>
