--- a/project2.html
+++ b/project2.html
@@ -60,10 +60,7 @@
     </section>
     <section>
       <h2>Technologies Used</h2>
-      <ul>
-        <li>R</li>
-        <li>tidyverse</li>
-      </ul>
+      <p>R, tidyverse</p>
     </section>
     <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
   </main>
