--- a/project3.html
+++ b/project3.html
@@ -60,12 +60,7 @@
     </section>
     <section>
       <h2>Technologies Used</h2>
-      <ul>
-        <li>Python</li>
-        <li>scikit-learn</li>
-        <li>Pandas</li>
-        <li>Jupyter</li>
-      </ul>
+      <p>Python,scikit-learn,Pandas,Jupyter</p>
     </section>
     <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
   </main>
