--- a/project1.html
+++ b/project1.html
@@ -54,7 +54,7 @@
       <h2>Resources</h2>
       <ul>
         <li><a href="https://github.com/jasminecash/SEP-Preprocess" target="_blank">GitHub Repository</a></li>
-        <li><a href="#" target="_blank">Manuscript (DOI link)</a></li>
+        <li><a href="https://www.sciencedirect.com/science/article/pii/S1935861X24007149?via%3Dihub" target="_blank">Abstract1</a></li>
         <li><a href="#" target="_blank">Dataset (OSF / Zenodo link)</a></li>
       </ul>
     </section>
