--- a/project1.html
+++ b/project1.html
@@ -41,27 +41,47 @@
 </head>
 <body>
   <header>
-    <h1>Project 1 – EEG Pipeline Comparison</h1>
+    <h1>Project Group – EEG Pipelines</h1>
   </header>
   <main>
     <section>
-      <h2>Description</h2>
+      <h2>Project 1 Description</h2>
       <p>
-        Compare preprocessing pipelines for EEG data to optimize signal quality and analysis accuracy.
+        Compare preprocessing pipelines for Somatosensory Evoked Potential (SEP) data to optimize signal quality and analysis accuracy. We compared 2 different reference locations (ear (EC) and midline (FCZ)) for SEP detection. Based on signal quality we elected to go with the electrode configuration using FCZ as the reference.
       </p>
     </section>
     <section>
       <h2>Resources</h2>
       <ul>
         <li><a href="https://github.com/jasminecash/SEP-Preprocess" target="_blank">GitHub Repository</a></li>
-        <li><a href="https://www.sciencedirect.com/science/article/pii/S1935861X24007149?via%3Dihub" target="_blank">Abstract1</a></li>
+        <li><a href="https://www.sciencedirect.com/science/article/pii/S1935861X24007149?via%3Dihub" target="_blank">Abstract 1-Used to Support SEP ID</a></li>
         <li><a href="#" target="_blank">Dataset (OSF / Zenodo link)</a></li>
       </ul>
     </section>
     <section>
       <h2>Technologies Used</h2>
-      <p>Python, MNE, NumPy, Pandas, Matplotlib</p>
+      <p>Matlab, EEGLAB, Tesa</p>
     </section>
+
+    <section>
+      <h2>Project 2 Description</h2>
+      <p>
+        Assess lateralization of SEPs using 64 channels.
+      </p>
+    </section>
+    <section>
+      <h2>Resources</h2>
+      <ul>
+        <li><a href="#" target="_blank">GitHub Repository</a></li>
+        <li><a href="#" target="_blank">Abstract 1-Used to Support SEP ID</a></li>
+        <li><a href="#" target="_blank">Dataset (OSF / Zenodo link)</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Technologies Used</h2>
+      <p>Matlab, EEGLAB, Tesa</p>
+    </section>
+    
     <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
   </main>
 </body>
