--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <li>
           <span class="icon">🧠</span>
           <a href="project1.html">
-            Project 1 – EEG Pipeline Comparison
+            Project Group – EEG Pipelines
           </a>
           <span class="description">
             Compare preprocessing pipelines for EEG data to optimize signal quality and analysis accuracy.
