--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             Project Group – EEG Pipelines
           </a>
           <span class="description">
-            Compare preprocessing pipelines for EEG data to optimize signal quality and analysis accuracy.
+            Preprocessing pipelines for EEG data to optimize signal quality and analysis accuracy.
           </span>
         </li>
       </ul>
