--- a/project1.html
+++ b/project1.html
@@ -45,6 +45,7 @@
   </header>
   <main>
     <section>
+      <span> 
       <h2>Project 1 Description</h2>
       <p>
         Compare preprocessing pipelines for Somatosensory Evoked Potential (SEP) data to optimize signal quality and analysis accuracy. We compared 2 different reference locations (ear (EC) and midline (FCZ)) for SEP detection. Based on signal quality we elected to go with the electrode configuration using FCZ as the reference.
@@ -61,6 +62,7 @@
     <section>
       <h2>Technologies Used</h2>
       <p>Matlab, EEGLAB, Tesa</p>
+     </span>
     </section>
 
     <section>
