--- a/project1.html
+++ b/project1.html
@@ -44,8 +44,8 @@
     <h1>Project Group – EEG Pipelines</h1>
   </header>
   <main>
+    <div class="project-card">
     <section>
-      <span> 
       <h2>Project 1 Description</h2>
       <p>
         Compare preprocessing pipelines for Somatosensory Evoked Potential (SEP) data to optimize signal quality and analysis accuracy. We compared 2 different reference locations (ear (EC) and midline (FCZ)) for SEP detection. Based on signal quality we elected to go with the electrode configuration using FCZ as the reference.
@@ -62,9 +62,10 @@
     <section>
       <h2>Technologies Used</h2>
       <p>Matlab, EEGLAB, Tesa</p>
-     </span>
     </section>
+    </div>
 
+    <div class="project-card">
     <section>
       <h2>Project 2 Description</h2>
       <p>
@@ -83,7 +84,7 @@
       <h2>Technologies Used</h2>
       <p>Matlab, EEGLAB, Tesa</p>
     </section>
-    
+    </div>
     <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
   </main>
 </body>
