--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <li>
           <span class="icon">📊</span>
           <a href="project2.html">
-            Project 2 – Clinical Data Cleaning
+            Project Group – Clinical Data Cleaning
           </a>
           <span class="description">
             Pipeline for cleaning and processing balance and gait assessment data for clinical research.
@@ -142,7 +142,7 @@
         <li>
           <span class="icon">🩺</span>
           <a href="project3.html">
-            Project 3 – Machine Learning & EHR
+            Project Group – Machine Learning & EHR
           </a>
           <span class="description">
             Predict hospital readmissions using machine learning algorithms applied to electronic health records.
