--- a/project3.html
+++ b/project3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project 3 – Machine Learning & EHR</title>
+  <title>Project Group – Machine Learning & EHR</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
