--- a/project1.html
+++ b/project1.html
@@ -94,10 +94,10 @@
         </p>
       </section>
       <section>
-        <h2>Resources</h2>
+        <h2>Resources & Products</h2>
         <ul>
           <li><a href="https://github.com/jasminecash/SEP-Preprocess" target="_blank">GitHub Repository</a></li>
-          <li><a href="https://www.sciencedirect.com/science/article/pii/S1935861X24007149?via%3Dihub" target="_blank">Abstract 1-Used to Support SEP ID</a></li>
+          <li><a href="https://www.sciencedirect.com/science/article/pii/S1935861X24007149?via%3Dihub" target="_blank">Abstract 1-Used to support SEP ID</a></li>
         </ul>
       </section>
       <section>
