--- a/project3.html
+++ b/project3.html
@@ -51,14 +51,14 @@
       </p>
     </section>
     <section>
-      <h2>Resources</h2>
+      <h2>Resources & Products</h2>
       <ul>
         <li><a href="https://github.com/jasminecash/ML-Algorithms-for-Hospital-Readmission" target="_blank">GitHub Repository</a></li>
       </ul>
     </section>
     <section>
       <h2>Technologies Used</h2>
-      <p>Python,scikit-learn,Pandas,Jupyter</p>
+      <p>R, R Markdown</p>
     </section>
     <a class="back-link" href="index.html">⬅ Back to Portfolio</a>
   </main>
