--- a/project2.html
+++ b/project2.html
@@ -54,7 +54,7 @@
       <h2>Resources & Products</h2>
       <ul>
         <li><a href="https://github.com/jasminecash/BBS-and-FGA-CFA" target="_blank">GitHub Repository</a></li>
-        <li><a href="https://www.sciencedirect.com/science/article/pii/S2590109523000587?via%3Dihub" target="_blank">Manuscript 1-The Functional Balance Ability Measure: A Measure of Balance Across the Spectrum of Functional Mobility in Persons Post-Stroke</a></li>
+        <li><a href="https://www.sciencedirect.com/science/article/pii/S2590109523000587?via%3Dihub" target="_blank">Manuscript 1: The Functional Balance Ability Measure: A Measure of Balance Across the Spectrum of Functional Mobility in Persons Post-Stroke</a></li>
       </ul>
     </section>
     <section>
